--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "weather",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "node-sass": "^4.9.4",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-number-format": "^4.0.3",
-    "react-scripts": "2.1.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+	"name": "weather",
+	"version": "0.1.0",
+	"private": true,
+	"homepage": "https://aprather51.github.io/Weather-Scope",
+	"dependencies": {
+		"gh-pages": "^2.0.1",
+		"node-sass": "^4.9.4",
+		"react": "^16.6.0",
+		"react-dom": "^16.6.0",
+		"react-number-format": "^4.0.3",
+		"react-scripts": "2.1.1"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"deploy": "yarn build && gh-pages -d build"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": [ ">0.2%", "not dead", "not ie <= 11", "not op_mini all" ]
 }
